--- a/public/index.html
+++ b/public/index.html
@@ -35,18 +35,23 @@
     <script src="/browser/components/footer/footer.directive.js"></script>
     <script src="/browser/components/oauth-button/oauth-button.directive.js"></script>
     <script src="/browser/utils/contenteditable/contenteditable.directive.js"></script>
-    <script src="/browser/app/home/home.state.js"></script>
-    <script src="/browser/app/signup/signup.state.js"></script>
-        <script src="/browser/app/signup/signup.controller.js"></script>
 
+    <script src="/browser/app/home/home.state.js"></script>
+
+    <script src="/browser/app/auth/auth.factory.js"></script>
+    <script src="/browser/app/signin/signin.directive.js"></script>
+    <script src="/browser/app/signup/signup.state.js"></script>
+    <script src="/browser/app/signup/signup.controller.js"></script>
     <script src="/browser/app/login/login.state.js"></script>
     <script src="/browser/app/login/login.controller.js"></script>
+
     <script src="/browser/app/user/user.factory.js"></script>
     <script src="/browser/app/user/list/user.list.state.js"></script>
     <script src="/browser/app/user/list/user.list.controller.js"></script>
     <script src="/browser/app/user/item/user.item.directive.js"></script>
     <script src="/browser/app/user/detail/user.detail.state.js"></script>
     <script src="/browser/app/user/detail/user.detail.controller.js"></script>
+
     <script src="/browser/app/story/list/story.list.state.js"></script>
     <script src="/browser/app/story/list/story.list.controller.js"></script>
     <script src="/browser/app/story/detail/story.detail.controller.js"></script>
