--- a/browser/app/story/list/story.list.html
+++ b/browser/app/story/list/story.list.html
@@ -20,9 +20,10 @@
 				</li><li>
 					<span>by</span>
 				</li><li>
-					<select ng-options="user as user.name for user in users track by user._id" ng-model="newStory.author" required>
-						<option value='' disabled>(select an author)</option>
-					</select>
+					<li>{{getCurrentUser().name}}</li>
+<!-- 					<select ng-options="user as user.name for user in users track by user._id" ng-model="newStory.author" required>
+						<option value='' disabled='{{getCurrentUser() !== user}}'>(select <acronym></acronym> author)</option>
+					</select> -->
 				</li>
 			</ul>
 			<button class="btn btn-warning btn-xs" ng-click="addStory()">
