--- a/browser/app/story/list/story.list.html
+++ b/browser/app/story/list/story.list.html
@@ -26,7 +26,7 @@
 					</select> -->
 				</li>
 			</ul>
-			<button class="btn btn-warning btn-xs" ng-click="addStory()">
+			<button ng-disabled="!getCurrentUser()" class="btn btn-warning btn-xs" ng-click="addStory()">
 				<span class="glyphicon glyphicon-plus"></span>
 			</button>
 		</li>
@@ -40,7 +40,7 @@
 					<a ui-sref="user({id: story.author._id})">{{ story.author.name }}</a>
 				</li>
 			</ul>
-			<button class="btn btn-default btn-xs" ng-click="removeStory(story)">
+			<button ng-show="story.author._id === getCurrentUser()._id" class="btn btn-default btn-xs" ng-click="removeStory(story)">
 				<span class="glyphicon glyphicon-remove"></span>
 			</button>
 		</li>
